kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-service
  labels:
    app: fibonacci
spec:
  selector:
    app: fibonacci
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: LoadBalancer
